--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <section class="title">
             <div class="wrapper1">
                 <div class="udemy">
-                    <a href=""><img src="images/logo-udemy.svg" alt="udemy logo" /></a> 
+                    <a href=""><img src="images/logo-udemy.svg" alt="udemy logo" style="width: 100px;"/></a> 
                     <nav>
                         <ul>
                             <li><small><a href="">Categories</a></small></li>
@@ -25,7 +25,7 @@
                             <li><small><a href="">Teach on Udemy</a></small></li>
                         </ul>
                         <div>
-                            <a href=""><img src="images/cart.png" alt="cart" /></a>
+                            <a href=""><img src="images/cart.png" alt="cart" style="width: 20px;"/></a>
                         </div>
                     </nav>
                 </div>
@@ -35,7 +35,7 @@
                             <li><button><a href=""><b>Log in</b></a></button></li>
                             <li><button><a href=""><b>Sign up</b></a></button></li>
                         </ul>
-                        <a href=""><img src="images/globe.png" alt="globe" /></a>
+                        <a href=""><img src="images/globe.png" alt="globe" style="width: 20px;"/></a>
                     </nav>
                 </div>
             </div>
@@ -100,6 +100,46 @@
                 <div id="students-images">
                     <a href=""><img src="images/student 1.JPG" alt="student 1" /></a>
                     <a href=""><img src="images/student 2.JPG" alt="student 2" /></a>
+                    <a href=""><img src="images/student 3 js.JPG" alt="student 3" /></a>
+                    <a href=""><img src="images/student 4.JPG" alt="student 4" /></a>
+                    <a href=""><img src="images/student 5 react.JPG" alt="student 5" /></a>
+                </div>
+            </div>
+            <div class="categories">
+                <h2>Top categories</h2>
+                <div class="caption">
+                    <figure id="design">
+                        <img src="images/design.jpg" alt="design" />
+                        <figcaption><b>Design</b></figcaption>
+                    </figure>
+                    <figure id="development">
+                        <img src="images/development.jpg" alt="development" />
+                        <figcaption><b>Development</b></figcaption>
+                    </figure>
+                    <figure id="marketing">
+                        <img src="images/marketting.jpg" alt="marketing" />
+                        <figcaption><b>Marketing</b></figcaption>
+                    </figure>
+                    <figure id="IT">
+                        <img src="images/IT.jpg" alt="IT" />
+                        <figcaption><b>IT and Software</b></figcaption>
+                    </figure>
+                    <figure id="personal">
+                        <img src="images/personal-dev.jpg" alt="personal" />
+                        <figcaption><b>Personal Development</b></figcaption>
+                    </figure>
+                    <figure id="business">
+                        <img src="images/business.jpg" alt="business" />
+                        <figcaption><b>Business</b></figcaption>
+                    </figure>
+                    <figure id="photo">
+                        <img src="images/photography.jpg" alt="photo" />
+                        <figcaption><b>Photography</b></figcaption>
+                    </figure>
+                    <figure id="music">
+                        <img src="images/music.jpg" alt="music" />
+                        <figcaption><b>Music</b></figcaption>
+                    </figure>
                 </div>
             </div>
         </section>
