--- a/index.html
+++ b/index.html
@@ -143,5 +143,157 @@
                 </div>
             </div>
         </section>
+        <section class="category">
+            <h1>Featured topics by category</h1>
+            <div class="wrapper4">
+                <div id="developments">
+                    <h3>Development</h3>
+                    <ul>
+                        <li>
+                            <a href=""><b>Python</b></a>
+                            <p>36,354,994 students</p>
+                        </li>
+                        <li>
+                            <a href=""><b>Web Development</b></a>
+                            <p>11,415,615 students</p>
+                        </li>
+                        <li>
+                            <a href=""><b>Machine Learning</b></a>
+                            <p>7,070,015 students</p>
+                        </li>
+                    </ul>
+                </div>
+                <div id="businesses">
+                    <h3>Business</h3>
+                    <ul>
+                        <li>
+                            <a href=""><b>Financial Analysis</b></a>
+                            <p>1,195,282 students</p>
+                        </li>
+                        <li>
+                            <a href=""><b>SQL</b></a>
+                            <p>5,977,561 students</p>
+                        </li>
+                        <li>
+                            <a href=""><b>PMP</b></a>
+                            <p>1,733,398 students</p>
+                        </li>
+                    </ul>
+                </div>
+                <div id="IT-SOFT">
+                    <h3>IT and Software</h3>
+                    <ul>
+                        <li>
+                            <a href=""><b>AWS Certification</b></a>
+                            <p>6,078,244 students</p>
+                        </li>
+                        <li>
+                            <a href=""><b>Ethical Hacking</b></a>
+                            <p>10,931,066 students</p>
+                        </li>
+                        <li>
+                            <a href=""><b>Cyber Security</b></a>
+                            <p>3,998,037 students</p>
+                        </li>
+                    </ul>
+                </div>
+                <div id="Design">
+                    <h3>Design</h3>
+                    <ul>
+                        <li>
+                            <a href=""><b>Photoshop</b></a>
+                            <p>10,909,736 students</p>
+                        </li>
+                        <li>
+                            <a href=""><b>Graphic Design</b></a>
+                            <p>3,381,052 students</p>
+                        </li>
+                        <li>
+                            <a href=""><b>Drawing</b></a>
+                            <p>2,410,849 students</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <button><a href=""><b>Explore more topic</b></a></button>
+        </section>
+        <section class="instructor">
+            <div class="wrapper5">
+                <img src="images/instructor-1x-v3.jpg" alt="instructor" />
+                <div class="instr.text">
+                    <h1>Become an instructor</h1>
+                    <p>
+                        Instructors from around the world teach millions of students on Udemy.
+                        We provide the tools and skills to teach what you love. <br/>
+                        <button><a href=""><b>Start teaching today</b></a></button>
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div id="trusted">
+                <h1>Trusted by over 13,400 great teams</h1>
+                <p>Leading companies use the same courses to help employees keep their skills fresh.</p>
+            </div>
+            <nav>
+                <img src="images/nasdaq-logo-black-and-white.png" alt="nasdaq" style="width: 100px;"/>
+                <img src="images/Volkswagen-logo-black.jpg" alt="vw" style="width: 40px;"/>
+                <img src="images/box-logo-black-and-white.png" alt="box" style="width: 50px;"/>
+                <img src="images/netapp.png" alt="netapp" style="width: 100px;"/>
+                <img src="images/eventbrite2.JPG" alt="eventbrite" style="width: 100px;"/>
+                <img src="images/tata.png" alt="tata" style="width: 100px;"/>
+            </nav>
+        </section>
+        <section class="transform">
+            <div class="wrapper6">
+                <div class="side-text">
+                    <img src="images/business logo.svg" alt="business-logo" style="width: 150px;"/>
+                <p>
+                    Get unlimited access to 19,000+ of Udemy’s top courses for your team.
+                    Learn and improve skills across business, tech, design, and more.
+                </p>
+                <button><a href=""><b>Get Udemy Business</b></a></button>
+                </div>
+                <img src="images/ub-1x-v3.jpg" alt="ub"/>
+            </div>
+            <div class="wrapper7">
+                <img src="images/upskill-pics.jpg" alt="upskill" style="width: 350px;"/>
+                <div class="side-text">
+                    <h1>Transform your life through education</h1>
+                <p>
+                    Learners around the world are launching new careers, advancing in their fields, and enriching their lives.
+                </p>
+                <button><a href=""><b>Find out how</b></a></button>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="wrapper8">
+                <div id="footer">
+                    <ul>
+                        <li><a href="">Udemy business</a></li>
+                        <li><a href="">Careers</a></li>
+                        <li><a href="">Terms</a></li>
+                        <li><a href="">Teach on Udemy</a></li>
+                        <li><a href="">Blog</a></li>
+                        <li><a href="">Privacy Policy</a></li>
+                        <li><a href="">Get the app</a></li>
+                        <li><a href="">Help and Support</a></li>
+                        <li><a href="">Cookies settings</a></li>
+                        <li><a href="">About us</a></li>
+                        <li><a href="">Affiliate</a></li>
+                        <li><a href="">Sitemap</a></li>
+                        <li><a href="">Contact us</a></li>
+                        <li><a href="">Investors</a></li>
+                        <li><a href="">Accessibility statement</a></li>
+                    </ul>
+                </div>
+                <img src="images/english logo22.JPG" alt="logo"/>
+            </div>
+            <div class="wrapper9">
+                <img src="images/footer-logo.JPG" alt="footer-logo" />
+                <P><small>2022 Udemy, Inc.</small></P>
+            </div>
+        </footer>
     </body>
 </html>
