--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
                     <ul>
                         <li><a href=""><img src="images/logo-udemy.svg" alt="udemy logo" style="width: 100px;"/></a></li>
                         <li><small><a href="">Categories</a></small></li>
-                        <li id="search"><input type="email" placeholder="Search for anything" /></li>
+                        <li id="search">
+                            <img src="images/search3.png" alt="search engine"/>
+                            <input type="email" placeholder="Search for anything" />
+                        </li>
                         <li><small><a href="">Udemy Business</a></small></li>
                         <li><small><a href="">Teach on Udemy</a></small></li>
                         <li><a href=""><img src="images/cart.png" alt="cart" style="width: 20px;"/></a></li>
@@ -286,7 +289,7 @@
             </div>
             <div class="wrapper9">
                 <img src="images/footer-logo.JPG" alt="footer-logo" />
-                <P><small>2022 Udemy, Inc.</small></P>
+                <P><small>&copy 2022 Udemy, Inc.</small></P>
             </div>
         </footer>
     </body>
